--- a/man/giph.1
+++ b/man/giph.1
@@ -69,6 +69,15 @@ Sets the region to capture.
 .BR \-w ", " \-\-window " " \fIINT
 Sets the window id of the desired window to capture.
 .TP
+.BR \-d ", " \-\-delay " " \fIINT
+Sets the time in seconds to wait before the recording starts.
+.TP
+.BR \-t ", " \-\-timer " " \fITIMEDURATION
+Sets a fixed time to record. The format is a timeduration as described in the ffmpeg documentation (https://ffmpeg.org/ffmpeg-utils.html#Time-duration). As an example, '10' would mean 10 seconds, '3:30' means 3 minutes and 30 seconds, '1:02:03' means 1 hour, 2 minutes and 3 seconds, and '5.5' means 5.5 seconds.
+.TP
+.BR \-f ", " \-\-framerate " \fIINT\fR (default: \fI15\fR)"
+Sets the desired framerate of the recorded gif. A higher framerate will result in a larger filesize.
+.TP
 .BR \-i ", " \-\-interface " \fISTRING\fR (default: \fIcli\fR)"
 Selects the user interface method that is used for countdown, timer and to stop the recording. The possible values are:
 .in +2
@@ -86,15 +95,6 @@ Selects one of the following encoders uses to encode the gif:
 .br
 \(bu
 .IR gifski ": highest quality gif encoder, rather slow, uses \fBGIFSKI OPTIONS\fR described below"
-.TP
-.BR \-d ", " \-\-delay " " \fIINT
-Sets the time in seconds to wait before the recording starts.
-.TP
-.BR \-t ", " \-\-timer " " \fITIMEDURATION
-Sets a fixed time to record. The format is a timeduration as described in the ffmpeg documentation (https://ffmpeg.org/ffmpeg-utils.html#Time-duration). As an example, '10' would mean 10 seconds, '3:30' means 3 minutes and 30 seconds, '1:02:03' means 1 hour, 2 minutes and 3 seconds, and '5.5' means 5.5 seconds.
-.TP
-.BR \-f ", " \-\-framerate " " \fIINT
-Sets the desired framerate of the recorded gif. A higher framerate will result in a larger filesize.
 .SH SLOP OPTIONS
 When
 .BR -s " or " --select
@@ -108,14 +108,14 @@ Set the selection border thickness.
 .BR \-p ", " \-\-padding " \fIFLOAT\fR (default: \fI0\fR)"
 Set the selection padding. This can be negative.
 .TP
-.BR \-t ", " \-\-tolerance " \fIFLOAT\fR (default: \fI2\fR)"
+.BR \-to ", " \-\-tolerance " \fIFLOAT\fR (default: \fI2\fR)"
 Defines how far the mouse can move after clicking while still being considered a click.
 .TP
 .BR \-c ", " \-\-color " \fIFLOAT,FLOAT,FLOAT,FLOAT\fR (default: \fI0.5,0.5,0.5,1\fR)"
 Set the selection color as RGB or ARGB.
 .TP
-.BR \-r ", " \-\-shader
-Set a shader to be used.
+.BR \-r ", " \-\-shader " \fISTRING"
+Set the shader to be used.
 .TP
 .BR \-n ", " \-\-nodecorations " \fIINT\fR (default: \fI0\fR)"
 .RI "Tries to select child windows. " 0 " is off, " 1 " tries to remove decorations, " 2 " aggressively tries to remove decorations."
@@ -134,11 +134,11 @@ When
 .I gifski
 is used, gifski will be used as the gif encoder. The following options will be passed to gifski if they are set: 
 .TP
-.BR \-q ", " \-\-quality " \fIINT\fR (default: \fI80\fR)"
+.BR \-gq ", " \-\-gifski-quality
 Set the quality from
 .RI "Set the quality from " 1 " to " 100 ", where 1 is the lowest, and 100 the best quality."
 .TP
-.BR \-f ", " \-\-fast
+.BR \-gf ", " \-\-gifski-fast
 Makes the encoding 3 times faster. Results in 10% lower quality and a bigger filesize though.
 .SH SEE ALSO
 .B slop(1)
