fixed SIGINT example which should kill giph and not capture, renamed capture into recording in man pages

--- a/man/giph.1
+++ b/man/giph.1
@@ -64,10 +64,10 @@ Uses slop to interactively select the desired region or window to record. This u
 described below.
 .TP
 .BR \-g ", " \-\-geometry " " \fIGEOMETRY
-Sets the region to capture.
+Sets the region to record.
 .TP
 .BR \-w ", " \-\-window " " \fIINT
-Sets the window id of the desired window to capture.
+Sets the window id of the desired window to record.
 .TP
 .BR \-d ", " \-\-delay " " \fIINT
 Sets the time in seconds to wait before the recording starts.
