added -y or --notify flag which sends notifications on error or success, xdotool is a hard dependency now, also updated readme and manpages to mention --notify, implements #4

--- a/man/giph.1
+++ b/man/giph.1
@@ -85,6 +85,9 @@ Selects the user interface method that is used for countdown, timer and to stop 
 .br
 \(bu
 .IR zenity ": displays control-windows using zenity"
+.TP
+.BR \-y ", " \-\-notify
+Uses notify-send to send an urgent notification if an error happens, or a normal notification when the final gif was saved successfully.
 .SH SLOP OPTIONS
 When
 .BR -s " or " --select
